--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,10 +2,20 @@
 # https://symfony.com/doc/current/security.html
 security:
 
+
+
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        in_memory: { memory: ~ }
+        in_database:
+            entity:
+                class: AppBundle\Entity\User
+                property: email
+
+    encoders:
+         AppBundle\Entity\User:
+            algorithm: bcrypt
+
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -15,6 +25,17 @@ security:
 
         main:
             anonymous: ~
+
+            provider: in_database
+
+            form_login:
+                login_path: security_login
+                check_path: security_login
+
+            logout:
+                path: security_logout
+                target: index
+
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
