--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,6 +28,8 @@ security:
 
             provider: in_database
 
+            user_checker: AppBundle\Security\UserChecker
+
             form_login:
                 login_path: security_login
                 check_path: security_login
