--- a/composer.json
+++ b/composer.json
@@ -14,23 +14,21 @@
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": "7.3.21",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
-        "sensio/distribution-bundle": "^5.0.19",
-        "sensio/framework-extra-bundle": "^5.0.0",
-        "symfony/monolog-bundle": "^3.1.0",
+        "sensio/framework-extra-bundle": "^6.0.0",
+        "symfony/flex": "^1.19",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.6.4",
-        "symfony/symfony": "3.4.*",
-        "symfony/translation": "^3.4",
-        "twig/twig": "^1.0||^2.0"
+        "symfony/swiftmailer-bundle": "^3.5",
+        "symfony/symfony": "^4.0",
+        "twig/twig": "^3.0"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "~2.2",
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^4.0"
     },
     "scripts": {
         "symfony-scripts": [
@@ -50,7 +48,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.5.9"
+            "php": "7.3.21"
         },
         "sort-packages": true
     },
