--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/.web-server-pid
 /app/config/parameters.yml
 /build/
 /phpunit.xml
@@ -18,3 +17,9 @@
 /.idea/
 /web/uploads/
 !/web/uploads/image/.gitignore
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
